# Django-Portfolio-2023

./: .env  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
pages/: admin.py  forms.py  models.py  urls.py  views.py
pages/migrations/: 0001_initial.py  0002_post_delete_blog.py  0003_blog_delete_post.py  0004_blog_cover.py  0005_rename_blog_post.py  0006_project.py  0007_post_slug.py  0008_alter_post_slug.py  0009_post_color.py  0010_remove_post_color.py  0011_post_color.py  0012_alter_post_color.py
portfolios/: views.py
static/audios/: audio.webm
static/css/: _base.css  base.css  style.css
static/fonts/: stylesheet.css
static/js/: _base.js  main.js  particles.json
templates/: 404.html  500.html  _about_me.html  _base.html  _faq.html  _footer.html  _hero.html  _navbar.html  about.html  about_me.html  background.html  banner.html  blog.html  contact.html  fab.html  faq.html  footer.html  hero.html  home.html  navbar.html  preloader.html  project.html  tech.html  tool.html  works.html
templates/pages/: about_me.html  blog.html  blog_detail.html  contact.html  home.html  success.html  works.html
templates/partials/: background.html  banner.html  cobe.html  email.html  fab.html  faq.html  footer.html  footer2.html  footer_home.html  hero.html  hero_about.html  hero_blog.html  hero_home.html  hero_home_old.html  hero_test.html  hero_works.html  navbar.html  post_detail.html  preloader.html  profile.html  project.html  tech.html
templates/partials/about_grid/: grid_1.html  grid_2.html  (+4 more)
theme/static_src/: tailwind.config.js
(+2 files in other folders)
