[tool.poetry]
name = "django-portfolio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_portfolio"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-tailwind = "^3.6.0"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
djlint = "^1.32.1"
django-browser-reload = "^1.11.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
